--- a/services/telegraf/telegraf.conf
+++ b/services/telegraf/telegraf.conf
@@ -25,7 +25,7 @@
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
-  urls = ["http://192.168.1.70:8086"]
+  urls = ["http://192.168.1.100:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -146,6 +146,15 @@
 #   ## The typical use case is for LVM volumes, to get the VG/LV name instead of
 #   ## the near-meaningless DM-0 name.
 #   # name_templates = ["$ID_FS_LABEL","$DM_VG_NAME/$DM_LV_NAME"]
+
+# Monitor sensors, requires lm-sensors package
+[[inputs.sensors]]
+  ## Remove numbers from field names.
+  ## If true, a field name like 'temp1_input' will be changed to 'temp_input'.
+  # remove_numbers = true
+
+  ## Timeout is the maximum amount of time that the sensors command can run.
+  timeout = "2s"
 
 # Read metrics about memory usage
 [[inputs.mem]]
