--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -198,3 +198,24 @@ services:
       - /home/tim/radarr/movies:/movies
       - /tmp/transcoding:/tmp/transcoding
     restart: unless-stopped
+
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:4.3.2-1
+    user: "0"
+    ports:
+      - 53:53/tcp
+      - 53:53/udp
+      - 67:67/udp
+      - 8380:80/tcp
+      - 443:443/tcp
+    environment:
+      - TZ=Netherlands/Amsterdam
+      - WEBPASSWORD=${PIHOLE_PASSWORD}
+    volumes:
+      - /home/tim/pihole/etc-pihole/:/etc/pihole/
+      - /home/tim/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
+    restart: unless-stopped
