Updating telegraf and diabling pihole on nuc

--- a/services/telegraf/telegraf.conf
+++ b/services/telegraf/telegraf.conf
@@ -119,6 +119,9 @@
   ## Set mount_points will restrict the stats to only the specified mount points.
   ## mount_points = ["/"]
 
+  ## Ignore mount points by filesystem type.
+  ignore_fs = ["tmpfs", "shm", "udev", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
+
 # Read metrics about disk IO by device
 [[inputs.diskio]]
   ## By default, telegraf will gather stats for all devices including
