--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
 
   web:
-    image: nginx:1.19.2 #Latest
+    image: nginx:1.19.5 #Latest
     container_name: web
     hostname: web
     restart: unless-stopped
@@ -10,9 +10,11 @@ services:
       - /home/tim/web/nginx/conf.d:/etc/nginx/conf.d
     ports:
       - 80:80
+    networks:
+      - home-web
 
   homeassistant:
-    image: homeassistant/home-assistant:0.114.4
+    image: homeassistant/home-assistant:2021.1.3 #Latest
     container_name: homeassistant
     hostname: homeassistant 
     network_mode: host
@@ -35,10 +37,9 @@ services:
       - /dev/ttyAMA0
     volumes:
       - /home/tim/homeassistant/config:/config
-      - /home/tim/.ssh/asus_router:/config/asus_router
 
   deconz:
-    image: marthoc/deconz:amd64-2.05.80 #Latest
+    image: marthoc/deconz:amd64-2.07.01 #Latest
     container_name: deconz
     hostname: deconz 
     network_mode: host
@@ -56,7 +57,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
 
   influxdb:
-    image: influxdb:1.8.1 #Latest
+    image: influxdb:1.8.3 #Latest
     container_name: influxdb 
     restart: unless-stopped
     hostname: influxdb
@@ -71,7 +72,7 @@ services:
       - 8086:8086
 
   grafana:
-    image: grafana/grafana:6.7.3 # 7.0.0 is available but need to look into any breaking changes
+    image: grafana/grafana:7.3.4 #Latest 
     container_name: grafana
     hostname: grafana
     user: 0:0
@@ -82,9 +83,11 @@ services:
       - /home/tim/grafana:/var/lib/grafana
     ports:
       - 3000:3000
+    networks:
+      - home-web
 
   telegraf:
-    image: telegraf:1.15.2 #Latest
+    image: telegraf:1.16.2 #Latest
     container_name: telegraf
     hostname: telegraf
     privileged: true
@@ -103,7 +106,7 @@ services:
       - ./services/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
 
   transmission:
-    image: linuxserver/transmission:3.00-r0-ls63 #Latest
+    image: linuxserver/transmission:3.00-r0-ls69 #Latest
     container_name: transmission
     hostname: transmission
     environment:
@@ -122,9 +125,11 @@ services:
       - 51413:51413
       - 51413:51413/udp
     restart: unless-stopped
+    networks:
+      - home-web
 
   sonarr:
-    image: linuxserver/sonarr:2.0.0.5344-ls77 #Latest
+    image: linuxserver/sonarr:2.0.0.5344-ls87 #Latest
     container_name: sonarr
     hostname: sonarr
     depends_on:
@@ -141,9 +146,11 @@ services:
     ports:
       - 8989:8989
     restart: unless-stopped
+    networks:
+      - home-web
   
   radarr:
-    image: linuxserver/radarr:3.0.0.3502-ls21 #Latest
+    image: linuxserver/radarr:3.0.0.4192-ls2 #Latest
     container_name: radarr
     hostname: radarr
     depends_on:
@@ -160,9 +167,11 @@ services:
     ports:
       - 7878:7878
     restart: unless-stopped
+    networks:
+      - home-web
 
   jackett:
-    image: linuxserver/jackett:v0.16.1039-ls14 #Latest
+    image: linuxserver/jackett:v0.16.2256-ls7 #Latest
     container_name: jackett
     hostname: jackett
     environment:
@@ -175,9 +184,11 @@ services:
     ports:
       - 9117:9117
     restart: unless-stopped
+    networks:
+      - home-web
 
   plex:
-    image: linuxserver/plex:1.19.5.3112-b23ab3896-ls114 #Latest
+    image: linuxserver/plex:1.21.0.3616-d87012962-ls5 #Latest
     container_name: plex
     hostname: plex
     network_mode: host
@@ -195,25 +206,32 @@ services:
       - /tmp/transcoding:/tmp/transcoding
     restart: unless-stopped
 
-    #  pihole:
-    #    container_name: pihole
-    #    image: pihole/pihole:v4.4
-    #    user: "0"
-    #    ports:
-    #      - 53:53/tcp
-    #      - 53:53/udp
-    #      - 67:67/udp
-    #      - 8380:80/tcp
-    #      - 443:443/tcp
-    #    environment:
-    #      - TZ=Netherlands/Amsterdam
-    #      - WEBPASSWORD=${PIHOLE_PASSWORD}
-    #      - DNS1=1.1.1.1
-    #      - DNS2=1.0.0.1
-    #    volumes:
-    #      - /home/tim/pihole/etc-pihole/:/etc/pihole/
-    #      - /home/tim/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/
-    #    dns:
-    #      - 127.0.0.1
-    #      - 1.1.1.1
-    #    restart: unless-stopped
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:v5.1.2 #Latest
+    user: "0"
+    ports:
+      - 53:53/tcp
+      - 53:53/udp
+      - 67:67/udp
+      - 8380:80/tcp
+      - 443:443/tcp
+    environment:
+      - TZ=Netherlands/Amsterdam
+      - WEBPASSWORD=${PIHOLE_PASSWORD}
+      - VIRTUAL_PORT=80
+      - VIRTUAL_HOST=pihole.home
+      - DNS1=1.1.1.1
+      - DNS2=1.0.0.1
+    volumes:
+      - /home/tim/pihole/etc-pihole/:/etc/pihole/
+      - /home/tim/pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/
+    dns:
+      - 127.0.0.1
+      - 1.1.1.1
+    restart: unless-stopped
+    networks:
+      - home-web
+
+networks:
+  home-web:
