--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
 
   web:
-    image: nginx:1.19.9 #Latest
+    image: nginx:1.19.9
     container_name: web
     hostname: web
     restart: unless-stopped
@@ -14,7 +14,7 @@ services:
       - home-web
 
   homeassistant:
-    image: homeassistant/home-assistant:2021.4.4 #Latest
+    image: homeassistant/home-assistant:2021.4.4
     container_name: homeassistant
     hostname: homeassistant 
     network_mode: host
@@ -39,7 +39,7 @@ services:
       - /home/tim/homeassistant/config:/config
 
   deconz:
-    image: marthoc/deconz:amd64-2.10.04 #Latest
+    image: marthoc/deconz:amd64-2.10.04 
     container_name: deconz
     hostname: deconz 
     network_mode: host
@@ -57,7 +57,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
 
   influxdb:
-    image: influxdb:1.8.4 #Latest
+    image: influxdb:1.8.4 
     container_name: influxdb 
     restart: unless-stopped
     hostname: influxdb
@@ -72,7 +72,7 @@ services:
       - 8086:8086
 
   grafana:
-    image: grafana/grafana:7.4.0 #Latest 
+    image: grafana/grafana:7.4.0  
     container_name: grafana
     hostname: grafana
     user: 0:0
@@ -87,7 +87,7 @@ services:
       - home-web
 
   telegraf:
-    image: telegraf:1.17.2 #Latest
+    image: telegraf:1.17.2 
     container_name: telegraf
     hostname: telegraf
     privileged: true
@@ -106,7 +106,7 @@ services:
       - ./services/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
 
   transmission:
-    image: linuxserver/transmission:3.00-r2-ls82 #Latest
+    image: linuxserver/transmission:3.00-r2-ls82 
     container_name: transmission
     hostname: transmission
     environment:
@@ -129,7 +129,7 @@ services:
       - home-web
 
   sonarr:
-    image: linuxserver/sonarr:3.0.6.1196-ls100 #Latest
+    image: linuxserver/sonarr:3.0.6.1196-ls100 
     container_name: sonarr
     hostname: sonarr
     depends_on:
@@ -150,7 +150,7 @@ services:
       - home-web
   
   radarr:
-    image: linuxserver/radarr:3.0.2.4552-ls97 #Latest
+    image: linuxserver/radarr:3.0.2.4552-ls97 
     container_name: radarr
     hostname: radarr
     depends_on:
@@ -169,20 +169,9 @@ services:
     restart: unless-stopped
     networks:
       - home-web
-  
-  flaresolverr:
-    image: ghcr.io/flaresolverr/flaresolverr:v1.2.5
-    container_name: flaresolverr
-    environment:
-      - LOG_LEVEL=info
-      - LOG_HTML=false
-      - CAPTCHA_SOLVER=none
-    ports:
-      - 8191:8191
-    restart: unless-stopped
 
   jackett:
-    image: linuxserver/jackett:v0.17.848-ls26 #Latest
+    image: linuxserver/jackett:v0.17.848-ls26 
     container_name: jackett
     hostname: jackett
     depends_on:
@@ -201,7 +190,7 @@ services:
       - home-web
 
   plex:
-    image: linuxserver/plex:1.22.1.4275-48e10484b-ls39 #Latest
+    image: linuxserver/plex:1.22.1.4275-48e10484b-ls39 
     container_name: plex
     hostname: plex
     network_mode: host
@@ -221,7 +210,7 @@ services:
 
   pihole:
     container_name: pihole
-    image: pihole/pihole:v5.6 #Latest
+    image: pihole/pihole:v5.6 
     user: "0"
     ports:
       - 53:53/tcp
