--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,6 @@
 {
+  "schedule": ["after 10am and before 5pm every weekday"],
+  "ignorePresets": [":prHourlyLimit2"],
   "extends": [
     "config:base"
   ]
