--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "schedule": ["after 10am and before 5pm every weekday"],
-  "ignorePresets": [":prHourlyLimit2"],
+  "prhourlylimit": 0,
   "extends": [
     "config:base"
   ]
