--- a/renovate.json
+++ b/renovate.json
@@ -8,14 +8,27 @@
     {
       "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/transmission"],
-      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\-r2-ls(?<patch>\\d+)?$"
-    }
-  ],
-  "packageRules": [
+      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)-r2-ls(?<patch>\\d+)?$"
+    },
     {
       "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/sonarr"],
-      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)\\-ls(?<patch>\\d+)?$"
+      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
+    },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["linuxserver/radarr"],
+      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
+    },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["linuxserver/jackett"],
+      "versionScheme": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
+    },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["linuxserver/plex"],
+      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
     }
   ]
 }
