--- a/renovate.json
+++ b/renovate.json
@@ -28,7 +28,7 @@
     {
       "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/plex"],
-      "versionScheme": "regex:^1\\.(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
+      "versionScheme": "regex:^1\\.(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(\\d*\\w*)-ls(\\d+)?$"
     }
   ]
 }
