--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -246,7 +246,7 @@ services:
 
       # web interface
       - "traefik.http.routers.pihole.rule=Host(`pihole.home`)"
-      - "traefik.http.routers.pihole.entrypoints=websecure"
+      - "traefik.http.routers.pihole.entrypoints=http"
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
 
       # Normal DNS coming in on 53 TCP, no TLS
