--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -253,7 +253,7 @@ services:
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
 
       # Normal DNS coming in on 53 TCP, no TLS
-      - "traefik.tcp.routers.dns.rule=Host(`pihole.home)"
+      - "traefik.tcp.routers.dns.rule=HostSNI(`pihole.home`)"
       - "traefik.tcp.routers.dns.entrypoints=dns"
       - "traefik.tcp.routers.dns.service=pihole"
       - "traefik.tcp.services.pihole.loadbalancer.server.port=53"
